--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
     <head>
         <title> Mitanshu Gadariya </title>
         <meta content="width=device-width, initial-scale=1" name="viewport">
+        <meta name= "theme-color"  content="1bbc9b"
         <link href="css/stylesheet.css" rel="stylesheet">
     </head>
     <body> 
        <header class="site-header" >   
-        <div class="site-content">
         <img class="profile-pic" src="https://instagram.famd4-1.fna.fbcdn.net/v/t51.2885-19/s150x150/115994466_740321960122617_8878289942165273260_n.jpg?_nc_ht=instagram.famd4-1.fna.fbcdn.net&_nc_ohc=J4qKliiPbcsAX9Id0SH&oh=d6fe40b98ca9f36fc3f4df2cc865aed3&oe=5F7A1F4A">
+        <div class="site-content">
        <div class= "change">
             <a href="linkedin.html">LINKEDIN</a> 
             <a href="github.html">GITHUB</a>
