fix: theme color

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title> Mitanshu Gadariya </title>
         <meta content="width=device-width, initial-scale=1" name="viewport">
-        <meta name= "theme-color"  content="1bbc9b"
+         <!-- <meta name= "theme-color"  content="1bbc9b"/>  -->
         <link href="css/stylesheet.css" rel="stylesheet">
     </head>
     <body> 
